--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
       "name": "yeswiki/theme-margot",
       "type": "yeswiki-theme",
+      "require": {
+           "composer/installers": "~1.0"
+      },
       "extra": {
            "installer-name": "margot"
       }
