fix(composer): update .json with config keys needed for new revisions of composer + .gitignore

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
       },
       "extra": {
            "installer-name": "margot"
+      },
+      "config": {
+            "allow-plugins": {
+                  "composer/installers": true
+            }
       }
 }
